<resources>

    <string name="app_name">CYMDroid</string>
    <string name="titre">CheckYourMood</string>

    <!-- Page de connexion -->
    <string name="texte_connexion">SE CONNECTER</string>
    <string name="libelle_identifiant">Adresse mail : </string>
    <string name="libelle_mdp">Mot de passe : </string>
    <string name="libelle_connexion">Connexion</string>

    <!-- Page d'accueil -->
    <string name="label_deconnexion">Se déconnecter</string>
    <string name="label_nouvelle_humeur">Nouvelle humeur</string>

    <!-- Pop up nouvelle humeur -->
    <string name="titre_popup">Nouvelle humeur</string>
    <string name="label_libelle">Libellé :</string>
    <string name="label_date_heure">Date et heure :</string>
    <string name="label_information">Information :</string>
    <string name="label_annuler">Annuler</string>
    <string name="label_valider">Valider</string>

    <!-- Toast erreur de connexion -->
    <string name="toast_erreur_login">Votre identifiant ou mot de passe est incorrec. Veuillez réessayer. </string>
    <string name="toast_erreur">Une erreur est survenue, réessayez plus tard</string>
    <string name="toast_erreur_reponse">Erreur de réponse du serveur. Nous travaillons dessus. Merci</string>

    <!-- Toast validation nouvelle humeur -->
    <string name="toast_validation_nv_humeur">Nouvelle humeur ajoutée avec succès !!</string>
</resources>
